# FRDM-MCXA153

./: .gitignore  LICENSE  README.md
Examples/frdmmcxa153_ese_driver_examples_lpuart_interrupt/: __repo__  ese_driver_examples_lpuart_interrupt_v3_15.xml  main.c  solution.md
Examples/frdmmcxa153_ese_driver_examples_lpuart_interrupt/armgcc/: CMakeLists.txt  mcux_include.json
Examples/frdmmcxa153_ese_general_examples_basics_getting_started/: __repo__  ese_general_examples_basics_getting_started_v3_15.xml  main.c  readme.md  readme_details.md  readme_vscode.md
Examples/frdmmcxa153_ese_general_examples_basics_getting_started/armgcc/: CMakeLists.txt  flags.cmake  mcux_include.json
Examples/frdmmcxa153_ese_general_examples_basics_getting_started/armgcc/debug/: .ninja_deps  .ninja_log  CMakeCache.txt  JLink_ese_general_examples_basics_getting_started.jlink  build.ninja  cmake_install.cmake  ese_general_examples_basics_getting_started.elf  output.map
SDK_24/: FRDM-MCXA153_manifest_v3_15.xml  SW-Content-Register.txt
SDK_24/boards/frdmmcxa153/demo_apps/hello_world/: example_board_readme.md  hello_world_v3_15.xml
SDK_24/boards/frdmmcxa153/demo_apps/led_blinky/: app.h  example_board_readme.md  hardware_init.c  led_blinky_peripheral_v3_15.xml  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h  readme.md
SDK_24/boards/frdmmcxa153/driver_examples/cdog/: app.h  cdog_v3_15.xml  readme.md
SDK_24/boards/frdmmcxa153/driver_examples/crc/: crc_v3_15.xml  example_board_readme.md  hardware_init.c  readme.md
SDK_24/boards/frdmmcxa153/driver_examples/freqme/: app.h  example_board_readme.md  freqme_interrupt_v3_15.xml  hardware_init.c  pin_mux.c
SDK_24/boards/frdmmcxa153/driver_examples/glikey/: app.h  example_board_readme.md  glikey_v3_15.xml  hardware_init.c
SDK_24/boards/frdmmcxa153/driver_examples/lptmr/: app.h  example_board_readme.md  hardware_init.c  lptmr.c  lptmr_v3_15.xml  pin_mux.c  readme.md
SDK_24/boards/frdmmcxa153/driver_examples/ostimer/: app.h  example_board_readme.md  hardware_init.c  ostimer_example_v3_15.xml  readme.md
SDK_24/boards/frdmmcxa153/driver_examples/pwm/: app.h  example_board_readme.md  hardware_init.c  pin_mux.c  pwm.c  pwm_v3_15.xml  readme.md
SDK_24/boards/frdmmcxa153/driver_examples/trdc/: example_board_readme.md  hardware_init.c  readme.md  trdc_v3_15.xml
SDK_24/boards/frdmmcxa153/driver_examples/utick/: example_board_readme.md  hardware_init.c  readme.md  utick_example_v3_15.xml
SDK_24/boards/frdmmcxa153/driver_examples/waketimer/: app.h  example_board_readme.md  hardware_init.c  readme.md  waketimer_example_v3_15.xml
SDK_24/boards/frdmmcxa153/driver_examples/wwdt/: app.h  example_board_readme.md  hardware_init.c  readme.md  wwdt_example_v3_15.xml
SDK_24/boards/frdmmcxa153/ese_general_examples/projects/1602_lcd_i2c/armgcc/: CMakeLists.txt
SDK_24/boards/frdmmcxa153/ese_shieldv3_examples/projects/waffle_bake_timer/armgcc/: CMakeLists.txt
SDK_24/components/mem_manager/: fsl_component_mem_manager.c  fsl_component_mem_manager.h  fsl_component_mem_manager_freertos.c  fsl_component_mem_manager_light.c
SDK_24/components/osa/: component_osa_interface.cmake
SDK_24/components/rtt/: driver_rtt_template.MCXA153.cmake
SDK_24/components/timer/: fsl_adapter_lptmr.c
SDK_24/devices/MCXA153/: MCXA153.xml  all_lib_device.cmake  device_startup.MCXA153.cmake  device_system.MCXA153.cmake
SDK_24/devices/MCXA153/arm/: MCXA153_ram.scf  startup_MCXA153.S
SDK_24/devices/MCXA153/drivers/: fsl_clock.c  fsl_cmc.c  fsl_cmc.h  fsl_edma_soc.c  fsl_edma_soc.h  fsl_inputmux_connections.h  fsl_lpcmp.c  fsl_lpcmp.h  fsl_lpi2c_edma.c  fsl_lpi2c_edma.h  fsl_ostimer.c  fsl_ostimer.h  fsl_romapi.h  fsl_trdc_soc.h
SDK_24/devices/MCXA153/gcc/: MCXA153_ram.ld  startup_MCXA153.S
SDK_24/devices/MCXA153/iar/: MCXA153_ram.icf  startup_MCXA153.s
SDK_24/devices/MCXA153/mcuxpresso/: startup_mcxa153.cpp
SDK_24/devices/MCXA153/project_template/: board.c  board.h  clock_config.c  clock_config.h  device_project_template.MCXA153.cmake  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
SDK_24/devices/MCXA153/template/: RTE_Device.h  device_RTE.MCXA153.cmake
SDK_24/devices/MCXA153/utilities/: fsl_sbrk.c  utility_debug_console_template_config.MCXA153.cmake
SDK_24/middleware/mcuboot_opensource/: ChangeLogKSDK.txt  README.md  SW-Content-Register.txt  repository.yml
SDK_24/middleware/mcuboot_opensource/docs/: design.md  readme-nxp_mcux_sdk.md  release-notes.md
SDK_24/middleware/mcuboot_opensource/ptest/: Cargo.toml
SDK_24/middleware/motor_control/: middleware_mc_pmsm_enc_frac.cmake  middleware_motor_control_mc_drivers_adc_mcx_epwm_frac.cmake  middleware_motor_control_mcaa_cm33nodsp.cmake  middleware_motor_control_pmsm_frac_imcat.cmake  middleware_motor_control_pmsm_frac_template.cmake  middleware_pmsm_mid_frac.cmake  middleware_pmsm_mid_frac_enc.cmake  release_notes.txt
SDK_24/middleware/motor_control/bldc/: fm_tsa_bldc.c
SDK_24/middleware/motor_control/freemaster/: pmsm_frac_enc.pmpx
SDK_24/middleware/rtcesl/: middleware_rtcesl_cm33nodsp.cmake
SDK_24/middleware/se_hostlib/: middleware_se_hostlib_commonInfra.cmake  middleware_se_hostlib_commonSe050.cmake  middleware_se_hostlib_commonSe050_CurrentApplet.cmake  middleware_se_hostlib_commonSe050_Scp03.cmake  middleware_se_hostlib_commonSe050_ksdk.cmake  middleware_se_hostlib_commonSe050_mcxa.cmake  middleware_se_hostlib_commonSe050_sss_ex.cmake  middleware_se_hostlib_commonSe050infra.cmake  middleware_se_hostlib_commonSe050smCom.cmake  middleware_se_hostlib_mbedtls_alt_demo_common.cmake  middleware_se_hostlib_mbedtls_sss.cmake  middleware_se_hostlib_mbedtls_sss_mcx.cmake  middleware_se_hostlib_mwlog.cmake  middleware_se_hostlib_sss_mcxa.cmake  middleware_se_hostlib_tstutils.cmake  middleware_se_hostlib_tstutils_time.cmake
SDK_24/middleware/se_hostlib/demos/: version_info.txt
SDK_24/middleware/se_hostlib/hostlib/: version_info.txt
SDK_24/middleware/se_hostlib/sss/: version_info.txt
SDK_24/rtos/freertos/freertos-kernel/: middleware_freertos-kernel_config.cmake
(+2002 files in other folders)
